Made a few more small improvments to the tornado data analysis (text and code)

--- a/tornadoes.Rmd
+++ b/tornadoes.Rmd
@@ -1,12 +1,13 @@
 ---
 title: Analysis of 2018 tornado data from NOAA
+date: October 23, 2019
 author: Peter Carbonetto
 output:
   html_document:
     theme: readable 
 ---
 
-*Add brief summary of analysis here.*
+This is 
 
 ```{r knitr-opts, include=FALSE}
 knitr::opts_chunk$set(comment = "#",collapse = TRUE,results = "hold",
@@ -15,7 +16,7 @@ knitr::opts_chunk$set(comment = "#",collapse = TRUE,results = "hold",
 
 # Load packages
 
-Load the packages used in the analysis below.
+Load the packages used for the analysis.
 
 ```{r load-pkgs, message=FALSE, warning=FALSE}
 library(readr)
@@ -25,8 +26,8 @@ library(cowplot)
 
 # Load tornado data
 
-Load the 2018 storm event data from the CSV file. The data should be
-stored in a data frame with 62,339 rows and 51 columns.
+Load the 2018 storm event data from the CSV file. The output should be
+a data frame with 62,339 rows and 51 columns.
 
 ```{r load-data, message=FALSE, warning=FALSE}
 storms <- read_csv("StormEvents_details-ftp_v1.0_d2018_c20190817.csv.gz")
@@ -35,8 +36,8 @@ nrow(storms)
 ncol(storms)
 ```
 
-Here we focus on events classified as tornadoes. We should find 1,250
-tornado events.
+Here we focus on events classified as tornadoes. There should be 1,250
+weather events that are tornadoes.
 
 ```{r get-tornado-data}
 tornadoes <- subset(storms,EVENT_TYPE == "Tornado")
@@ -44,7 +45,7 @@ nrow(tornadoes)
 ```
 
 The tornadoes are categorized by a severity scale, with "EF3" being
-the most severe. Only a small number (12) of the tornadoes 2018 are
+the most severe. Only a small number (12) of the tornadoes 2018 were
 classified as EF3.
 
 ```{r summarize-f-scale}
@@ -54,9 +55,10 @@ summary(tornadoes$TOR_F_SCALE)
 
 # Plot geographic distribution of tornadoes
 
-Using the geographic data provided, we can easily create a map showing
-the location of all tornado events that occurred in 2018. A color
-scheme is used to highlight the most severe tornadoes.
+Using the geographic data provided (the latitudes and longitudes),
+create a map showing the location of all tornado events that occurred
+in 2018. Color the tornadoes by severity to highlight the most severe
+tornadoes (shown in orange and magenta).
 
 ```{r plot-tornadoes}
 rows      <- order(tornadoes$TOR_F_SCALE)
@@ -65,14 +67,15 @@ ggplot(tornadoes,aes(x = BEGIN_LON,y = BEGIN_LAT,color = TOR_F_SCALE)) +
   geom_path(data = map_data("state"),aes(x = long,y = lat,group = group),
             color = "black") +
   geom_point(shape = 20,size = 4) +
-  scale_color_manual(values = c("skyblue","dodgerblue","darkorange",
+  scale_color_manual(values = c("lightskyblue","skyblue","darkorange",
                                 "magenta","gray")) +
   labs(x = "longitude",y = "latitude")
 ```
 
-As expected, the greatest concentration of severe tornadoes occurred
-in Midwestern states such as Kansas and Mississippi. There is also a 
-quite large cluster of severe tornadoes in and around upper Louisiana, which coincides with a documented ["tornado outbreak" in Louisiana in April
-2018][tornado-outbreak].
+As expected, the greatest concentration of severe tornadoes is in
+Midwestern states such as Kansas and Mississippi. There is also a
+quite large cluster of severe tornadoes in and around upper
+Louisiana. Indeed, there was a ["tornado outbreak" that occurred in
+Louisiana in April 2018][tornado-outbreak].
 
 [tornado-outbreak]: https://en.wikipedia.org/wiki/Tornado_outbreak_of_April_13%E2%80%9315,_2018
